--- a/_config.yml
+++ b/_config.yml
@@ -6,27 +6,27 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: ko
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Seoul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: TEST # the main title
+title: I MAKE MONEY FOR HAMBOGO # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: PIXEL ART + GAME DEVELOPEMENT # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  TESTESTEST!
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: https://forHAMBOGO.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: forHAMBOGO # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: HAMBOGO
-  email: example@domain.com # change to your email address
+  email: moneyforhambogo@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
@@ -223,3 +223,7 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+jekyll_admin:
+   hidden_links:
+   homepage: ""
